--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^1.2.0",
     "express": "~4.12.4",
     "jade": "~1.9.2",
+    "mongo": "^0.1.0",
+    "monk": "^1.0.1",
     "morgan": "~1.5.3",
     "passport": "^0.2.2",
     "passport-linkedin-oauth2": "^1.2.1",
